--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: 
           name: Install LibUV
           command: |
-            pecl install channel://pecl.php.net/uv-0.2.4
+            sudo pecl install channel://pecl.php.net/uv-0.2.4
 
       - run: 
           name: Install packages using composer
