--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: 
           name: Install LibUV
           command: |
-            sudo apt-get install -y libuv1-dev
+            sudo apt-get install -y libuv-dev
             sudo pecl install channel://pecl.php.net/uv-0.2.4
 
       - run: 
