--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run: 
           name: Install LibUV
           command: |
-            sudo apt-get update && sudo apt-get install -y libuv-dev
+            sudo apt-get update && sudo apt-get install -y libuv1-dev
 
       - run: 
           name: Install packages using composer
