add the the default file watcher files for all the loop implementations that don't have specific watcher implementation

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         }
     },
     "require": {
-        "react/event-loop": "^1.1"
+        "react/event-loop": "^1.1",
+        "yosymfony/resource-watcher": "^3.0"
     },
     "license": "MIT",
     "authors": [
