--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,12 @@ jobs:
           command: |
             php ./vendor/bin/pest
 
+      - run:
+          name: Upload coverage report to codecov.io
+          command: |
+            bash <(curl -s https://codecov.io/bash)
+
+
 workflows:
   version: 2
   test:
